# shake

./: .gitignore  Cargo.toml  README.md  derivation.nix  flake.nix  shake.1
src/: create.rs  lib.rs  main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
