[workspace]
members = [
    "xtask",
]

[package]
name = "shake"
version = "0.1.3"
edition = "2021"
description = "An opinionated command-line utility for managing projects and interacting with Git."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "string"] }
